# Lumos

./: .gitignore
Backend/: .env  .gitignore  main.py  pyproject.toml
Backend/app/api/: authentication_routes.py
Backend/app/api/authentication/: authentication_routes.py
Backend/app/core/: config.py  database.py
Backend/app/mappings/authentication/: create_user_response.py
Backend/app/models/: user.py
Backend/app/schemas/authentication/: sign_in_schema.py  user_schema.py
Backend/app/services/authentication/: log_in_user_service.py  user_account_service.py
Backend/app/utils/: jwt_token.py  password_hasher.py  password_policy.py
Backend/migrations/: env.py
Backend/migrations/versions/: 279e01148402_updating_user_model.py  8424471d22f2_updating_users_table.py  b8af62642ebb_creating_users_table.py
