[project]
name = "backend"
version = "0.1.0"
description = "Lumos is an AI-powered document and data intelligence platform where users upload Excel files, PDFs, CSVs, or Word documents and receive instant visual insights, summaries, and AI-driven analysis powered by agents that reason over the data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.137.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
]
